--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/hendrawanwijaya/hendra-one-socket-io-chat-server/issues"
   },
-  "homepage": "https://github.com/hendrawanwijaya/hendra-one-socket-io-chat-server#readme"
+  "homepage": "https://github.com/hendrawanwijaya/hendra-one-socket-io-chat-server#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
+  }
 }
